# thrust_allocation_methods

./: CMakeLists.txt  README.md  package.xml
config/: thrust_allocation_config.yaml
include/thrust_allocation/: maneuvering_allocator.hpp  nlp.hpp  pseudo_inverse.hpp  qp.hpp  thrust_allocation_node.hpp
launch/: maneuvering.launch.py  nlp.launch.py  qp.launch.py  thrust_allocation.launch.py  thrust_allocation_all.launch.py  thrust_allocation_cpp.launch.py  thrust_allocation_new.launch.py  thrust_allocation_py.launch.py
scripts/: maneuvering_node.py  nlp_node.py  qp_node.py  thrust_allocation_all.py  thrust_allocation_new_node.py  thrust_allocation_node.py
src/: maneuvering_allocator.cpp  nlp.cpp  pseudo_inverse.cpp  qp.cpp  thrust_allocation_node.cpp
thrust_allocation/: __init__.py  maneuvering_allocator.py  nlp.py  pseudo_inverse.py  qp.py  thrust_allocation.py  thrust_allocation_new.py
